# qtsample

./: pyproject.toml
qtsample/: __init__.py  httpget.py  nanobrowser.py
tests/: test_qtsample.py
